--- a/src/sms/Admin_GUI/Transactions.css
+++ b/src/sms/Admin_GUI/Transactions.css
@@ -7,7 +7,7 @@
 }
 
 #Main_Label{
-    -fx-font-family: Arial;
+    -fx-font-family: "Helvetica Rounded";
     -fx-font-weight: bold;
     -fx-font-size: 33;
     -fx-text-fill: rgb(52,72,100);
@@ -17,11 +17,16 @@
     -fx-background-color: rgb(52,72,100);
 }
 
+#line{
+    -fx-background-color: black;
+}
+
 #Main_Scroll_Pane{
     -fx-background-color: transparent;
-    -fx-border-color: transparent;
-    -fx-border-radius: 10;
-    -fx-background-radius: 10;
+    -fx-border-color: black;
+    -fx-border-width: 0.5;
+    /*-fx-border-radius: 10;
+    -fx-background-radius: 10;*/
 }
 
 
@@ -40,7 +45,7 @@
 }
 
 #Trans_Table .column-header .label {
-    -fx-font-family: Arial;
+    -fx-font-family: "Helvetica Rounded";
     -fx-font-weight: bold;
     -fx-text-fill: #969696;
     -fx-font-size: 15px;
@@ -48,7 +53,7 @@
 }
 
 #Trans_Table .cell {
-    -fx-font-family: Arial;
+    -fx-font-family: "Helvetica Rounded";
     -fx-alignment: CENTER;
     -fx-font-size: 15px;
     -fx-text-fill: rgb(52, 72, 100);
