--- a/src/sms/Admin_GUI/Transactions.fxml
+++ b/src/sms/Admin_GUI/Transactions.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.shape.Line?>
@@ -34,6 +36,9 @@
                         </TableView>
                      </content>
                   </ScrollPane>
+                  <ChoiceBox fx:id="Year_Choice_Box" layoutX="1140.0" layoutY="48.0" prefHeight="40.0" prefWidth="78.0" />
+                  <ChoiceBox fx:id="Month_Choice_Box" layoutX="990.0" layoutY="47.0" prefHeight="40.0" prefWidth="134.0" />
+                  <TextField fx:id="SearchBar" layoutX="709.0" layoutY="47.0" prefHeight="40.0" prefWidth="267.0" promptText="Search infromation here..." />
                </children>
             </AnchorPane>
          </children></AnchorPane>
