--- a/src/sms/Admin_GUI/Accounts.fxml
+++ b/src/sms/Admin_GUI/Accounts.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
@@ -21,8 +21,7 @@
                     </font>
                 </Label>
                 <Line endX="1096.2000732421875" endY="7.62939453125E-6" layoutX="133.0" layoutY="82.0" startX="-100.0" />
-                <TextField id="searchTextField" fx:id="searchTextField" layoutX="33.0" layoutY="101.0" prefHeight="36.0" prefWidth="158.0" promptText="       Search" style="-fx-border-radius: 300px;" styleClass="searchTextField" stylesheets="@Accounts.css" />
-                <Button id="RemoveAccountButton" fx:id="RemoveAccountButton" layoutX="198.0" layoutY="101.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="110.0" styleClass="RemoveAccountButton" stylesheets="@Accounts.css" text="Remove Account" textFill="#181717" />
+                <TextField id="searchTextField" fx:id="searchTextField" layoutX="33.0" layoutY="101.0" prefHeight="36.0" prefWidth="191.0" promptText="       Search" style="-fx-border-radius: 300px;" styleClass="searchTextField" stylesheets="@Accounts.css" />
                 <FontAwesomeIcon id="searchIcon" fx:id="searchIcon" caretBias="false" focusTraversable="true" glyphName="SEARCH" layoutX="48.0" layoutY="124.0" opacity="0.26" size="15" styleClass="searchIcon" />
                 <AnchorPane layoutX="33.0" layoutY="158.0" prefHeight="570.0" prefWidth="1194.0">
                     <children>
@@ -42,6 +41,7 @@
                   </ScrollPane>
                     </children>
                 </AnchorPane>
+            <ChoiceBox fx:id="CBox" layoutX="241.0" layoutY="101.0" prefHeight="36.0" prefWidth="150.0" />
             </children>
         </AnchorPane>
     </children>
