--- a/src/sms/Admin_GUI/Accounts_Rows.fxml
+++ b/src/sms/Admin_GUI/Accounts_Rows.fxml
@@ -4,6 +4,7 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
@@ -13,10 +14,10 @@
          <children>
             <Label id="Contents" fx:id="UserID_LB" alignment="CENTER" prefHeight="58.0" prefWidth="138.0" stylesheets="@Accounts.css" text="564897" />
             <Label id="Contents" fx:id="Username_LB" alignment="CENTER" prefHeight="58.0" prefWidth="257.0" text="Username" />
-            <Label id="Contents" fx:id="Password_LB" alignment="CENTER" prefHeight="58.0" prefWidth="230.0" text="Password" />
+            <PasswordField fx:id="Password_LB" prefHeight="58.0" prefWidth="238.0" />
             <Label id="Contents" fx:id="AccountName_LB" alignment="CENTER" prefHeight="58.0" prefWidth="303.0" text="Account Name" />
             <Label id="Contents" fx:id="Role_LB" alignment="CENTER" prefHeight="58.0" prefWidth="160.0" text="Role" />
-            <Button fx:id="Row_Button" mnemonicParsing="false" prefHeight="77.0" prefWidth="75.0">
+            <Button fx:id="Row_Button" mnemonicParsing="false" onAction="#edit" prefHeight="77.0" prefWidth="75.0">
                <graphic>
                   <FontAwesomeIcon glyphName="EDIT" selectionFill="#66fa7d" selectionStart="0" size="30" wrappingWidth="30.0" />
                </graphic>
