--- a/src/sms/Admin_GUI/Transactions.fxml
+++ b/src/sms/Admin_GUI/Transactions.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -20,24 +19,20 @@
             <AnchorPane prefHeight="194.0" prefWidth="1286.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <Label fx:id="Main_Label" layoutX="65.0" layoutY="45.0" stylesheets="@Transactions.css" text="Transactions" />
-                  <Line fx:id="div_line" endX="950.5999755859375" layoutX="267.0" layoutY="112.0" startX="-195.00003051757812" />
-                  <ScrollPane fx:id="Main_Scroll_Pane" layoutX="67.0" layoutY="140.0" prefHeight="622.0" prefWidth="1156.0" stylesheets="@Transactions.css">
-                     <content>
-                        <TableView fx:id="Trans_Table" prefHeight="726.0" prefWidth="1137.0" stylesheets="@Transactions.css">
-                          <columns>
-                            <TableColumn fx:id="Trans_ID" prefWidth="128.53336030244827" text="Transaction ID" />
-                            <TableColumn fx:id="Cust_ID" prefWidth="112.0" text="Customer ID" />
-                              <TableColumn fx:id="Cust_Name" prefWidth="339.99986267089844" text="Customer Name" />
-                              <TableColumn fx:id="Trans_Amount" prefWidth="162.400146484375" resizable="false" text="Transaction Amount" />
-                              <TableColumn fx:id="Deadline" prefWidth="145.066650390625" text="Deadline" />
-                              <TableColumn fx:id="Trans_Date" prefWidth="149.86663818359375" text="Date" />
-                              <TableColumn fx:id="Trans_Time" prefWidth="98.13330078125" text="Time" />
-                          </columns>
-                        </TableView>
-                     </content>
-                  </ScrollPane>
                   <ChoiceBox fx:id="Year_Choice_Box" layoutX="1140.0" layoutY="48.0" prefHeight="40.0" prefWidth="78.0" />
                   <ChoiceBox fx:id="Month_Choice_Box" layoutX="990.0" layoutY="47.0" prefHeight="40.0" prefWidth="134.0" />
+                  <Line fx:id="div_line" endX="950.5999755859375" layoutX="267.0" layoutY="112.0" startX="-195.00003051757812" />
+                  <TableView fx:id="Trans_Table" layoutX="67.0" layoutY="140.0" prefHeight="611.0" prefWidth="1152.0" stylesheets="@Transactions.css">
+                    <columns>
+                      <TableColumn fx:id="Trans_ID" prefWidth="128.53336030244827" text="Transaction ID" />
+                      <TableColumn fx:id="Cust_ID" prefWidth="112.0" text="Customer ID" />
+                        <TableColumn fx:id="Cust_Name" prefWidth="339.99986267089844" text="Customer Name" />
+                        <TableColumn fx:id="Trans_Amount" prefWidth="162.400146484375" resizable="false" text="Transaction Amount" />
+                        <TableColumn fx:id="Deadline" prefWidth="145.066650390625" text="Deadline" />
+                        <TableColumn fx:id="Trans_Date" prefWidth="149.86663818359375" text="Date" />
+                        <TableColumn fx:id="Trans_Time" prefWidth="111.2000732421875" text="Time" />
+                    </columns>
+                  </TableView>
                   <TextField fx:id="SearchBar" layoutX="709.0" layoutY="47.0" prefHeight="40.0" prefWidth="267.0" promptText="Search infromation here..." />
                </children>
             </AnchorPane>
