--- a/src/sms/Admin_GUI/Payment_Items.fxml
+++ b/src/sms/Admin_GUI/Payment_Items.fxml
@@ -15,6 +15,6 @@
       <Label fx:id="Amount_LB2" alignment="CENTER_RIGHT" layoutX="98.0" layoutY="153.0" prefHeight="18.0" prefWidth="228.0" stylesheets="@Payments.css" text="P 3456.00" />
       <Label fx:id="Address_LB1" layoutX="29.0" layoutY="84.0" prefHeight="18.0" prefWidth="308.0" stylesheets="@Payments.css" text="Address:" />
       <Line endX="167.00003051757812" endY="7.62939453125E-6" layoutX="168.0" layoutY="112.0" startX="-149.53334045410156" stroke="#344864" />
-      <Button fx:id="PayButton" layoutX="254.0" layoutY="188.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="82.0" text="Pay" />
+      <Button fx:id="PayButton" layoutX="254.0" layoutY="188.0" mnemonicParsing="false" onAction="#pay" prefHeight="36.0" prefWidth="82.0" text="Pay" />
    </children>
 </AnchorPane>
