DONE POS AND TRANSACTIONS

--- a/src/sms/Admin_GUI/Accounts.css
+++ b/src/sms/Admin_GUI/Accounts.css
@@ -51,7 +51,7 @@
 }
 
 #Contents{
-    -fx-text-fill: rgb(0, 64, 154);
+    -fx-text-fill: rgb(52, 72, 100);;
     -fx-font-family: "Arial";
     -fx-font-size: 15;
     -fx-font-weight: bold;
