--- a/src/sms/Admin_GUI/Transactions.fxml
+++ b/src/sms/Admin_GUI/Transactions.fxml
@@ -2,11 +2,12 @@
 
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="794.0" prefWidth="1536.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sms.Admin_GUI.Transaction_Controller">
@@ -22,18 +23,23 @@
                   <ChoiceBox fx:id="Year_Choice_Box" layoutX="1140.0" layoutY="48.0" prefHeight="40.0" prefWidth="78.0" />
                   <ChoiceBox fx:id="Month_Choice_Box" layoutX="990.0" layoutY="47.0" prefHeight="40.0" prefWidth="134.0" />
                   <Line fx:id="div_line" endX="950.5999755859375" layoutX="267.0" layoutY="112.0" startX="-195.00003051757812" />
-                  <TableView fx:id="Trans_Table" layoutX="67.0" layoutY="140.0" prefHeight="611.0" prefWidth="1152.0" stylesheets="@Transactions.css">
-                    <columns>
-                      <TableColumn fx:id="Trans_ID" prefWidth="128.53336030244827" text="Transaction ID" />
-                      <TableColumn fx:id="Cust_ID" prefWidth="112.0" text="Customer ID" />
-                        <TableColumn fx:id="Cust_Name" prefWidth="339.99986267089844" text="Customer Name" />
-                        <TableColumn fx:id="Trans_Amount" prefWidth="162.400146484375" resizable="false" text="Transaction Amount" />
-                        <TableColumn fx:id="Deadline" prefWidth="145.066650390625" text="Deadline" />
-                        <TableColumn fx:id="Trans_Date" prefWidth="149.86663818359375" text="Date" />
-                        <TableColumn fx:id="Trans_Time" prefWidth="111.2000732421875" text="Time" />
-                    </columns>
-                  </TableView>
                   <TextField fx:id="SearchBar" layoutX="709.0" layoutY="47.0" prefHeight="40.0" prefWidth="267.0" promptText="Search infromation here..." />
+                  <ScrollPane fx:id="ScrollPane" layoutX="55.0" layoutY="206.0" prefHeight="530.0" prefWidth="1174.0" stylesheets="@Transactions.css">
+                     <content>
+                        <VBox fx:id="vBox" prefHeight="447.0" prefWidth="1154.0" spacing="5.0" />
+                     </content>
+                  </ScrollPane>
+                  <HBox fx:id="HBOX" layoutX="52.0" layoutY="156.0" prefHeight="52.0" prefWidth="1180.0" stylesheets="@Transactions.css">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="119.0" text="Transaction ID" />
+                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="119.0" text="Customer ID" />
+                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="293.0" text="Customer Name" />
+                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Amount" />
+                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Due Date" />
+                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Date" />
+                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Time" />
+                     </children>
+                  </HBox>
                </children>
             </AnchorPane>
          </children></AnchorPane>
