--- a/src/sms/Admin_GUI/Payments.fxml
+++ b/src/sms/Admin_GUI/Payments.fxml
@@ -5,37 +5,30 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.shape.Line?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="794.0" prefWidth="1536.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sms.Admin_GUI.Payment_Main_Controller">
-   <left>
-      <AnchorPane prefHeight="200.0" prefWidth="250.0" BorderPane.alignment="CENTER" />
-   </left>
-   <center>
-      <AnchorPane fx:id="Center_Pane" prefHeight="794.0" prefWidth="1286.0" stylesheets="@Template.css" BorderPane.alignment="CENTER">
+
+<AnchorPane fx:id="Center_Pane" prefHeight="794.0" prefWidth="1286.0" stylesheets="@Template.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sms.Admin_GUI.Payment_Main_Controller">
+   <children>
+      <AnchorPane prefHeight="794.0" prefWidth="1286.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane prefHeight="794.0" prefWidth="1286.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <Label fx:id="MainLabel" layoutX="88.0" layoutY="50.0" stylesheets="@Payments.css" text="Pending Payments and Due Dates" />
-                  <Line endX="913.0001220703125" layoutX="287.0" layoutY="129.0" startX="-205.40005493164062" stroke="#344864" />
-                  <ScrollPane fx:id="ScrollPane" focusTraversable="false" layoutX="81.0" layoutY="149.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="587.0" prefWidth="1120.0" stylesheets="@Payments.css">
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                     <content>
-                        <FlowPane fx:id="Flow" hgap="10.0" prefHeight="638.0" prefWidth="1103.0" vgap="10.0" />
-                     </content>
-                  </ScrollPane>
-                  <TextField fx:id="SearchBar" layoutX="907.0" layoutY="42.0" prefHeight="50.0" prefWidth="301.0" promptText="Search" stylesheets="@Payments.css">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </TextField>
-               </children>
-            </AnchorPane>
+            <Label fx:id="MainLabel" layoutX="88.0" layoutY="50.0" stylesheets="@Payments.css" text="Pending Payments and Due Dates" />
+            <Line endX="913.0001220703125" layoutX="287.0" layoutY="129.0" startX="-205.40005493164062" stroke="#344864" />
+            <ScrollPane fx:id="ScrollPane" focusTraversable="false" layoutX="81.0" layoutY="149.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="587.0" prefWidth="1120.0" stylesheets="@Payments.css">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <content>
+                  <FlowPane fx:id="Flow" hgap="10.0" prefHeight="638.0" prefWidth="1103.0" vgap="10.0" />
+               </content>
+            </ScrollPane>
+            <TextField fx:id="SearchBar" layoutX="907.0" layoutY="42.0" prefHeight="50.0" prefWidth="301.0" promptText="Search" stylesheets="@Payments.css">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </TextField>
          </children>
       </AnchorPane>
-   </center>
-</BorderPane>
+   </children>
+</AnchorPane>
