--- a/src/sms/Admin_GUI/Transactions.fxml
+++ b/src/sms/Admin_GUI/Transactions.fxml
@@ -5,43 +5,37 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="794.0" prefWidth="1536.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sms.Admin_GUI.Transaction_Controller">
-   <left>
-      <AnchorPane fx:id="Left" prefHeight="200.0" prefWidth="250.0" stylesheets="@Transactions.css" BorderPane.alignment="CENTER" />
-   </left>
-   <center>
-      <AnchorPane fx:id="Center_Pane" prefHeight="794.0" prefWidth="1286.0" stylesheets="@Template.css" BorderPane.alignment="CENTER">
+
+<AnchorPane fx:id="Center_Pane" prefHeight="794.0" prefWidth="1286.0" stylesheets="@Template.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sms.Admin_GUI.Transaction_Controller">
+   <children>
+      <AnchorPane prefHeight="194.0" prefWidth="1286.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane prefHeight="194.0" prefWidth="1286.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <Label fx:id="Main_Label" layoutX="65.0" layoutY="45.0" stylesheets="@Transactions.css" text="Transactions" />
+            <ChoiceBox fx:id="Year_Choice_Box" layoutX="1140.0" layoutY="48.0" prefHeight="40.0" prefWidth="78.0" />
+            <ChoiceBox fx:id="Month_Choice_Box" layoutX="990.0" layoutY="47.0" prefHeight="40.0" prefWidth="134.0" />
+            <Line fx:id="div_line" endX="950.5999755859375" layoutX="267.0" layoutY="112.0" startX="-195.00003051757812" />
+            <TextField fx:id="SearchBar" layoutX="709.0" layoutY="47.0" prefHeight="40.0" prefWidth="267.0" promptText="Search infromation here..." />
+            <ScrollPane fx:id="ScrollPane" layoutX="55.0" layoutY="206.0" prefHeight="530.0" prefWidth="1174.0" stylesheets="@Transactions.css">
+               <content>
+                  <VBox fx:id="vBox" prefHeight="447.0" prefWidth="1154.0" spacing="5.0" />
+               </content>
+            </ScrollPane>
+            <HBox fx:id="HBOX" layoutX="52.0" layoutY="156.0" prefHeight="52.0" prefWidth="1180.0" stylesheets="@Transactions.css">
                <children>
-                  <Label fx:id="Main_Label" layoutX="65.0" layoutY="45.0" stylesheets="@Transactions.css" text="Transactions" />
-                  <ChoiceBox fx:id="Year_Choice_Box" layoutX="1140.0" layoutY="48.0" prefHeight="40.0" prefWidth="78.0" />
-                  <ChoiceBox fx:id="Month_Choice_Box" layoutX="990.0" layoutY="47.0" prefHeight="40.0" prefWidth="134.0" />
-                  <Line fx:id="div_line" endX="950.5999755859375" layoutX="267.0" layoutY="112.0" startX="-195.00003051757812" />
-                  <TextField fx:id="SearchBar" layoutX="709.0" layoutY="47.0" prefHeight="40.0" prefWidth="267.0" promptText="Search infromation here..." />
-                  <ScrollPane fx:id="ScrollPane" layoutX="55.0" layoutY="206.0" prefHeight="530.0" prefWidth="1174.0" stylesheets="@Transactions.css">
-                     <content>
-                        <VBox fx:id="vBox" prefHeight="447.0" prefWidth="1154.0" spacing="5.0" />
-                     </content>
-                  </ScrollPane>
-                  <HBox fx:id="HBOX" layoutX="52.0" layoutY="156.0" prefHeight="52.0" prefWidth="1180.0" stylesheets="@Transactions.css">
-                     <children>
-                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="119.0" text="Transaction ID" />
-                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="119.0" text="Customer ID" />
-                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="293.0" text="Customer Name" />
-                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Amount" />
-                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Due Date" />
-                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Date" />
-                        <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Time" />
-                     </children>
-                  </HBox>
+                  <Label alignment="CENTER" prefHeight="58.0" prefWidth="119.0" text="Transaction ID" />
+                  <Label alignment="CENTER" prefHeight="58.0" prefWidth="119.0" text="Customer ID" />
+                  <Label alignment="CENTER" prefHeight="58.0" prefWidth="293.0" text="Customer Name" />
+                  <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Amount" />
+                  <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Due Date" />
+                  <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Date" />
+                  <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Time" />
                </children>
-            </AnchorPane>
-         </children></AnchorPane>
-   </center>
-</BorderPane>
+            </HBox>
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
