--- a/src/sms/Admin_GUI/Accounts.fxml
+++ b/src/sms/Admin_GUI/Accounts.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="1286.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sms.Admin_GUI.Accounts_Controller_Main">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="1286.0" stylesheets="@Accounts.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sms.Admin_GUI.Accounts_Controller_Main">
     <children>
           <Label layoutX="33.0" layoutY="10.399999618530273" text="Accounts" textFill="#344864">
               <font>
@@ -19,7 +20,10 @@
               </font>
           </Label>
           <Line endX="1096.2000732421875" endY="7.62939453125E-6" layoutX="133.0" layoutY="60.400001525878906" startX="-100.0" />
-          <TextField id="searchTextField" fx:id="searchTextField" layoutX="33.0" layoutY="79.4000015258789" prefHeight="36.0" prefWidth="191.0" promptText="       Search" style="-fx-border-radius: 300px;" styleClass="searchTextField" stylesheets="@Accounts.css" />
+          <TextField id="searchTextField" fx:id="searchTextField" layoutX="33.0" layoutY="79.4000015258789" prefHeight="36.0" prefWidth="191.0" promptText="Search" style="-fx-border-radius: 300px;" styleClass="searchTextField" stylesheets="@Accounts.css">
+         <padding>
+            <Insets left="10.0" />
+         </padding></TextField>
           <FontAwesomeIcon id="searchIcon" fx:id="searchIcon" caretBias="false" focusTraversable="true" glyphName="SEARCH" layoutX="48.0" layoutY="102.4000015258789" opacity="0.26" size="15" styleClass="searchIcon" />
           <AnchorPane layoutX="33.0" layoutY="136.39999389648438" prefHeight="570.0" prefWidth="1194.0">
               <children>
@@ -27,9 +31,9 @@
                <children>
                   <Label fx:id="HeadLabel" alignment="CENTER" prefHeight="27.0" prefWidth="125.0" stylesheets="@Accounts.css" text="User ID" />
                   <Label fx:id="HeadLabel" alignment="CENTER" prefHeight="27.0" prefWidth="270.0" stylesheets="@Accounts.css" text="Username" />
-                  <Label fx:id="HeadLabel" alignment="CENTER" prefHeight="27.0" prefWidth="215.0" text="Account Password" />
-                  <Label fx:id="HeadLabel" alignment="CENTER" prefHeight="27.0" prefWidth="326.0" text="Account Name" />
-                  <Label fx:id="HeadLabel" alignment="CENTER" prefHeight="27.0" prefWidth="150.0" text="Account Role" />
+                  <Label fx:id="HeadLabel" alignment="CENTER" prefHeight="27.0" prefWidth="215.0" stylesheets="@Accounts.css" text="Account Password" />
+                  <Label fx:id="HeadLabel" alignment="CENTER" prefHeight="27.0" prefWidth="326.0" stylesheets="@Accounts.css" text="Account Name" />
+                  <Label fx:id="HeadLabel" alignment="CENTER" prefHeight="27.0" prefWidth="150.0" stylesheets="@Accounts.css" text="Account Role" />
                </children>
             </HBox>
             <ScrollPane fx:id="ScrollPane" layoutX="17.0" layoutY="37.0" prefHeight="507.0" prefWidth="1182.0" stylesheets="@Accounts.css">
