--- a/src/sms/Admin_GUI/DATABASE_ADD.css
+++ b/src/sms/Admin_GUI/DATABASE_ADD.css
@@ -1,12 +1,17 @@
+
 .SaveButton:hover{
 
-    -fx-background-color: #f88456;
-
+    -fx-background-color: #5EA7B2;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-font-size: 15;
 }
 .CancelButton:hover{
 
-    -fx-background-color: #FF0000;
-
+    -fx-background-color: rgb(290,100,123);
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-font-size: 15;
 }
 
 .SaveButton{
@@ -14,7 +19,8 @@
     -fx-background-color: white;
     -fx-text-fill: #344864;
     -fx-border-radius: 50px;
-
+    -fx-font-weight: bold;
+    -fx-background-radius: 5;
 }
 
 .CancelButton{
@@ -22,7 +28,8 @@
 -fx-background-color: white;
     -fx-text-fill: #344864;
     -fx-border-radius: 50px;
-
+    -fx-font-weight: bold;
+    -fx-background-radius: 5;
 }
 
 
