--- a/src/sms/Admin_GUI/DATABASE_ALL.css
+++ b/src/sms/Admin_GUI/DATABASE_ALL.css
@@ -25,6 +25,7 @@
     -fx-background-color: transparent;
     -fx-border-color: transparent;
     -fx-border-width: 0;
+    -fx-font-size: 12;
 }
 
 #Location_Filter_Button1{
@@ -65,7 +66,7 @@
 #Main_Label{
     -fx-font-family: "Arial";
     -fx-font-weight: bold;
-    -fx-font-size: 24;
+    -fx-font-size: 30;
     -fx-text-fill: rgb(52,72,100);
 }
 
@@ -76,8 +77,8 @@
     -fx-font-weight: bold;
     -fx-background-color: rgb(248, 132, 86);
     -fx-text-fill: white;
-    -fx-background-radius: 5px;
-    -fx-border-radius: 5px;
+    -fx-background-radius: 10px;
+    -fx-border-radius: 10px;
     -fx-padding: 5 10;
     -fx-cursor: hand;
     -fx-border-color: transparent;
@@ -97,8 +98,8 @@
     -fx-font-weight: bold;
     -fx-background-color: rgb(255, 184, 58);
     -fx-text-fill: white;
-    -fx-background-radius: 5px;
-    -fx-border-radius: 5px;
+    -fx-background-radius: 10px;
+    -fx-border-radius: 10px;
     -fx-padding: 5 10;
     -fx-cursor: hand;
     -fx-border-color: transparent;
@@ -117,22 +118,26 @@
     -fx-font-family: Arial;
     -fx-font-size: 14px;
     -fx-font-weight: bold;
-    -fx-background-color: rgb(255, 184, 58);
-    -fx-border-color: transparent;
+    -fx-background-color: white;
+    -fx-border-color: rgb(94, 167, 178);
     -fx-border-radius: 10;
     -fx-background-radius: 10;
 }
+.combo-box .list-cell {
+    -fx-text-fill: rgb(52,72,100);
+}
 
 #Filter_Combobox:hover {
-    -fx-background-color: derive(rgb(255, 184, 58), -10%);
+    -fx-background-color: derive(rgb(94, 167, 178), -10%);
+    -fx-text-fill:rgb(241,240,233);
 }
 
 
 /*SEARCH BAR*/
 #Search_Bar {
     -fx-font-family: Arial;
-    -fx-font-size: 14px;
-    -fx-padding: 0 10 0 45;
+    -fx-font-size: 15px;
+    -fx-padding: 0 8 0 40;
     -fx-background-color: rgb(248, 248, 248);
     -fx-text-fill: rgb(50, 50, 50);
     -fx-border-color: rgb(200, 200, 200);
@@ -158,7 +163,7 @@
     -fx-font-family: "Arial";
     -fx-font-weight: bold;
     -fx-font-size: 12;
-    -fx-text-fill: rgb(52,72,100);
+    -fx-text-fill: #80808e;
 }
 
 
