--- a/src/sms/Admin_GUI/Payments.fxml
+++ b/src/sms/Admin_GUI/Payments.fxml
@@ -8,13 +8,12 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.shape.Line?>
 
-
 <AnchorPane fx:id="Center_Pane" prefHeight="794.0" prefWidth="1286.0" stylesheets="@Template.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sms.Admin_GUI.Payment_Main_Controller">
    <children>
       <AnchorPane prefHeight="794.0" prefWidth="1286.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="MainLabel" layoutX="88.0" layoutY="50.0" stylesheets="@Payments.css" text="Pending Payments and Due Dates" />
-            <Line endX="913.0001220703125" layoutX="287.0" layoutY="129.0" startX="-205.40005493164062" stroke="#344864" />
+            <Label fx:id="MainLabel" layoutX="81.0" layoutY="67.0" stylesheets="@Payments.css" text="Pending Payments &amp; Due Dates" />
+            <Line endX="913.0001220703125" layoutX="287.0" layoutY="129.0" startX="-205.40005493164062" stroke="#cbc9bb" />
             <ScrollPane fx:id="ScrollPane" focusTraversable="false" layoutX="81.0" layoutY="149.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="587.0" prefWidth="1120.0" stylesheets="@Payments.css">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -23,7 +22,7 @@
                   <FlowPane fx:id="Flow" hgap="10.0" prefHeight="638.0" prefWidth="1103.0" vgap="10.0" />
                </content>
             </ScrollPane>
-            <TextField fx:id="SearchBar" layoutX="907.0" layoutY="42.0" prefHeight="50.0" prefWidth="301.0" promptText="Search" stylesheets="@Payments.css">
+            <TextField fx:id="SearchBar" layoutX="982.0" layoutY="67.0" prefHeight="38.0" prefWidth="219.0" promptText="Search" stylesheets="@Payments.css">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
