--- a/src/sms/Admin_GUI/Transactions.fxml
+++ b/src/sms/Admin_GUI/Transactions.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -9,16 +10,20 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="Center_Pane" prefHeight="794.0" prefWidth="1286.0" stylesheets="@Template.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sms.Admin_GUI.Transaction_Controller">
    <children>
       <AnchorPane prefHeight="194.0" prefWidth="1286.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="Main_Label" layoutX="65.0" layoutY="45.0" stylesheets="@Transactions.css" text="Transactions" />
-            <ChoiceBox fx:id="Year_Choice_Box" layoutX="1140.0" layoutY="48.0" prefHeight="40.0" prefWidth="78.0" />
-            <ChoiceBox fx:id="Month_Choice_Box" layoutX="990.0" layoutY="47.0" prefHeight="40.0" prefWidth="134.0" />
-            <Line fx:id="div_line" endX="950.5999755859375" layoutX="267.0" layoutY="112.0" startX="-195.00003051757812" />
-            <TextField fx:id="SearchBar" layoutX="709.0" layoutY="47.0" prefHeight="40.0" prefWidth="267.0" promptText="Search infromation here..." />
+            <Label fx:id="Main_Label" layoutX="65.0" layoutY="62.0" stylesheets="@Transactions.css" text="Transactions" />
+            <ChoiceBox fx:id="Year_Choice_Box" layoutX="1140.0" layoutY="65.0" prefHeight="40.0" prefWidth="78.0" stylesheets="@Transactions.css" />
+            <ChoiceBox fx:id="Month_Choice_Box" layoutX="990.0" layoutY="64.0" prefHeight="40.0" prefWidth="134.0" stylesheets="@Transactions.css" />
+            <Line fx:id="div_line" endX="950.5999755859375" layoutX="269.0" layoutY="127.0" startX="-214.46664428710938" stroke="#cbc9bb" />
+            <TextField fx:id="SearchBar" layoutX="709.0" layoutY="64.0" prefHeight="40.0" prefWidth="267.0" promptText="        Search" style="-fx-border-radius: 20; -fx-background-radius: 20;" stylesheets="@Transactions.css">
+               <font>
+                  <Font size="15.0" />
+               </font></TextField>
             <ScrollPane fx:id="ScrollPane" layoutX="55.0" layoutY="206.0" prefHeight="530.0" prefWidth="1174.0" stylesheets="@Transactions.css">
                <content>
                   <VBox fx:id="vBox" prefHeight="447.0" prefWidth="1154.0" spacing="5.0" />
@@ -26,7 +31,7 @@
             </ScrollPane>
             <HBox fx:id="HBOX" layoutX="52.0" layoutY="156.0" prefHeight="52.0" prefWidth="1180.0" stylesheets="@Transactions.css">
                <children>
-                  <Label alignment="CENTER" prefHeight="58.0" prefWidth="119.0" text="Transaction ID" />
+                  <Label alignment="CENTER" prefHeight="58.0" prefWidth="119.0" text="Transaction ID" textFill="#a6a6a6" />
                   <Label alignment="CENTER" prefHeight="58.0" prefWidth="119.0" text="Customer ID" />
                   <Label alignment="CENTER" prefHeight="58.0" prefWidth="293.0" text="Customer Name" />
                   <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Amount" />
@@ -35,7 +40,8 @@
                   <Label alignment="CENTER" prefHeight="58.0" prefWidth="140.0" text="Time" />
                </children>
             </HBox>
-            <Button layoutX="597.0" layoutY="48.0" mnemonicParsing="false" onAction="#UpdateUI" prefHeight="40.0" prefWidth="100.0" text="Refresh" />
+            <Button fx:id="refresh" layoutX="597.0" layoutY="65.0" mnemonicParsing="false" onAction="#UpdateUI" prefHeight="40.0" prefWidth="100.0" stylesheets="@Transactions.css" text="Refresh" />
+            <FontAwesomeIcon fill="#a6a6a6" glyphName="SEARCH" layoutX="723.0" layoutY="90.0" size="18" />
          </children>
       </AnchorPane>
    </children>
